samples/_failures_safe/1760888396_cbd408_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2494f954.c:172: error: expected ‘;’, ‘,’ or ‘)’ at end of input
